# aides-agri

./: .gitignore  .lighthouserc.json  .slugignore  LICENSE  Procfile  README.md  conftest.py  cron.json  justfile  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vendor.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  vendor-js-deps.yml
apps/admin_concurrency/: admin.py  apps.py  models.py
apps/admin_concurrency/migrations/: 0001_initial.py
apps/admin_concurrency/tests/: conftest.py  test_admin.py
apps/agri/: README.md  admin.py  apps.py  forms.py  grist.py  importmaps.py  models.py  siret.py  sitemap.py  tasks.py  urls.py  utils.py  views.py
apps/agri/data/: README.md  mapping_categories_juridiques.csv  mapping_codes_naf.csv  mapping_departements.csv  mapping_tranche_effectif_salarie.csv
apps/agri/migrations/: 0001_initial.py  0001_initial_another_one.py  0002_alter_filiere_nom_alter_groupementproducteurs_nom_and_more.py  0002_feedback_sent_from_url.py  0003_alter_feedback_options.py  0003_groupementproducteurs_is_real.py  0004_alter_groupementproducteurs_options.py
apps/agri/templatetags/: agri_tags.py
apps/agri/tests/: common.py  conftest.py  test_siret.py  test_utils.py  test_views.py
apps/aides/: README.md  admin.py  apps.py  grist.py  models.py  sitemap.py  tasks.py  urls.py  views.py
apps/aides/admin/: __init__.py  _common.py  aide.py  other_models.py
apps/aides/integration/: __init__.py  _base.py  _grist.py  _utils.py  aides_territoires.py  eau_grandsudouest.py  eau_loire_bretagne.py  franceagrimer.py  region_aura.py  region_bretagne.py
apps/aides_feedback/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/aides_matching/: apps.py  siret.py  urls.py  views.py
apps/grist/: admin.py  apps.py  loader.py  models.py
apps/pac/: admin.py  apps.py  models.py
apps/product/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/ui/: context_processors.py  importmaps.py  urls.py  views.py
conf/: admin.py  apps.py  urls.py  wsgi.py
conf/fixtures/: aides_01_sujets.json  aides_02_filieres.json  aides_03_zones_geographiques.json  dsfr_config.json
conf/settings/: base.py  default.py  devel.py  local.py  scalingo.py  test.py  testing.py
cypress/e2e/: home.cy.js
scripts/: extract_chefs_sea.py
scripts/chefs-sea/: extract.py
scripts/pdf-to-structured-data/: .gitignore  md-to-csv.py
templates/admin/: change_form_object_tools.html
templates/dsfr/: global_css.html
templates/two_factor/: _base.html
webroot/: robots-prod.txt
(+199 files in other folders)
