[project]
requires-python = ">=3.11"
name = "aides-agri"
version = "0.1.0"
dependencies = [
  "django ~=5.1",
  "django-anymail[brevo] ~=13.0",
  "django-dsfr ~=2.1",
  "django-grist-loader ~=0.1",
  "django-htmx>=1.23.0",
  "markdown ~=3.8",
  "mjml-python ~=1.3",
  "procrastinate[django] ~=3.1",
  "psycopg[binary] ~=3.0",
  "mjml-python ~=1.3",
  "requests ~=2.32",
  "sentry-sdk[django] ~=2.26",
]

[dependency-groups]
dev = [
  "djade",
  "django-browser-reload",
  "django-debug-toolbar",
  "ruff",
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-factoryboy",
  "requests-mock",
]
scalingo = [
  "gunicorn ~=23.0",
  "whitenoise ~=6.8",
]

[tool.coverage.run]
omit = ["**/tests/*"]

[tool.coverage.report]
show_missing = true
