[project]
requires-python = ">=3.13"
name = "aides-agri"
version = "0.1.0"
dependencies = [
  "beautifulsoup4 ~=4.13",
  "django ~=5.2",
  "django-anymail[brevo] ~=13.0",
  "django-csp ~=4.0",
  "django-dsfr ~=2.1",
  "django-grist-loader ~=0.3",
  "django-tasks ~=0.6",
  "django-htmx ~=1.23",
  "django-two-factor-auth[phonenumberslite] ~=1.17",
  "gunicorn ~=23.0",
  "markdown ~=3.8",
  "markdownify ~=1.1",
  "mjml-python ~=1.3",
  "qrcode ~=7.4",
  "psycopg[binary] ~=3.0",
  "mjml-python ~=1.3",
  "requests ~=2.32",
  "sentry-sdk[django] ~=2.26",
  "whitenoise ~=6.8",
]

[dependency-groups]
dev = [
  "djade",
  "django-browser-reload",
  "django-debug-toolbar",
  "ruff",
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-factoryboy",
  "requests-mock",
]

[tool.coverage.run]
omit = ["**/tests/*"]

[tool.coverage.report]
show_missing = true
